force-app/main/default/objects/Vendor_Contract__c/Vendor_Contract__c.object-meta.xml
<CustomObject>
    <description>Record contracts held between CARA and outside service providers or vendors. Source of reminders for upcoming expirations.</description>
    <label>Vendor Contract</label>
    <nameField>
        <displayFormat>VC-{0000}</displayFormat>
        <label>Vendor Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>