force-app/main/default/objects/Vendor_Contract__c/fields/Annual_Costs__c.field-meta.xml
<CustomField>
    <fullName>Annual_Costs__c</fullName>
    <description>Indicate the annual cost/fees associated with this contract.</description>
    <inlineHelpText>Indicate the annual cost/fees associated with this contract.</inlineHelpText>
    <label>Annual Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>