force-app/main/default/objects/Vendor_Contract__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Record notes about this contract, if applicable.</description>
    <inlineHelpText>Record notes about this contract, if applicable.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>