force-app/main/default/objects/Vendor_Contract__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Record the ending date of this contract.</description>
    <inlineHelpText>Record the ending date of this contract.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>