force-app/main/default/objects/Vendor_Contract__c/fields/Monthly_Costs__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Costs__c</fullName>
    <description>Indicate the monthly cost/fees associated with this contract.</description>
    <inlineHelpText>Indicate the monthly cost/fees associated with this contract.</inlineHelpText>
    <label>Monthly Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>