force-app/main/default/objects/Vendor_Contract__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Create a link to the primary point of contract with the vendor for this contract.</description>
    <inlineHelpText>Create a link to the primary point of contract with the vendor for this contract.</inlineHelpText>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Non_Student</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vendor Contracts</relationshipLabel>
    <relationshipName>Vendor_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>