force-app/main/default/objects/Vendor_Contract__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Record the starting date of this contract.</description>
    <inlineHelpText>Record the starting date of this contract.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>