force-app/main/default/objects/Vendor_Contract__c/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <description>Indicate the total cost/fees over the life of this contract.</description>
    <inlineHelpText>Indicate the total cost/fees over the life of this contract.</inlineHelpText>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>