force-app/main/default/objects/Vendor_Contract__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>Create a link to the Organization/Account record for this contract&apos;s Vendor.</description>
    <inlineHelpText>Create a link to the Organization record for this contract&apos;s Vendor.</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor Contracts</relationshipLabel>
    <relationshipName>Vendor_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>